# main/internal/app/comment/delivery/http/comment_delivery.go
@@ -2,14 +2,17 @@ package commentDelivery
 
 import (
 	"errors"
+	"mime/multipart"
 	"net/http"
 	"net/url"
 	"strconv"
+	"strings"
 
 	packageConfig "github.com/go-park-mail-ru/2020_2_JMickhs/package/configs"
 
 	"github.com/mailru/easyjson"
 
+	"github.com/go-park-mail-ru/2020_2_JMickhs/main/configs"
 	"github.com/go-park-mail-ru/2020_2_JMickhs/main/internal/app/comment"
 	commModel "github.com/go-park-mail-ru/2020_2_JMickhs/main/internal/app/comment/models"
 	customerror "github.com/go-park-mail-ru/2020_2_JMickhs/package/error"
@@ -33,11 +36,47 @@ func NewCommentHandler(r *mux.Router, hs comment.Usecase, lg *logger.CustomLogge
 		log:            lg,
 	}
 
+	r.Path("/api/v1/comments/photos").Queries("id", "{id:[0-9]+}").HandlerFunc(handler.GetPhotos).Methods("GET")
 	r.HandleFunc("/api/v1/comments", middlewareApi.CheckCSRFOnHandler(handler.AddComment)).Methods("POST")
 	r.HandleFunc("/api/v1/comments", middlewareApi.CheckCSRFOnHandler(handler.UpdateComment)).Methods("PUT")
 	r.HandleFunc("/api/v1/comments/{id:[0-9]+}", middlewareApi.CheckCSRFOnHandler(handler.DeleteComment)).Methods("DELETE")
 	r.Path("/api/v1/comments").Queries("id", "{id:[0-9]+}", "limit", "{limit:[0-9]+}", "offset", "{from:[0-9]+}").
 		HandlerFunc(handler.ListComments).Methods("GET")
+}
+
+func (hh *CommentHandler) DetectFileContentType(file multipart.File) (string, error) {
+	fileHeader := make([]byte, 512)
+	contentType := ""
+	if _, err := file.Read(fileHeader); err != nil {
+		return contentType, customerror.NewCustomError(err, clientError.BadRequest, 1)
+	}
+
+	if _, err := file.Seek(0, 0); err != nil {
+		return contentType, customerror.NewCustomError(err, clientError.BadRequest, 1)
+	}
+	contentTypeStr := http.DetectContentType(fileHeader)
+	contentType = strings.Split(contentTypeStr, "/")[1]
+	if contentType != "jpg" && contentType != "png" && contentType != "jpeg" {
+		return contentType, customerror.NewCustomError(errors.New("Wrong file type"), clientError.UnsupportedMediaType, 1)
+	}
+	return contentType, nil
+}
+
+// swagger:route GET /api/v1/comments/photos comment Photos
+// GetList of photos
+// responses:
+//  200: photos
+//  400: badrequest
+func (ch *CommentHandler) GetPhotos(w http.ResponseWriter, r *http.Request) {
+
+	hotelID := r.FormValue("id")
+
+	photos, err := ch.CommentUseCase.GetPhotos(hotelID)
+	if err != nil {
+		customerror.PostError(w, r, ch.log, err, nil)
+		return
+	}
+	responses.SendDataResponse(w, photos)
 }
 
 // swagger:route GET /api/v1/comments comment comments
@@ -77,18 +116,47 @@ func (ch *CommentHandler) ListComments(w http.ResponseWriter, r *http.Request) {
 //  400: badrequest
 //  423: locked
 func (ch *CommentHandler) AddComment(w http.ResponseWriter, r *http.Request) {
-	comment := commModel.Comment{}
-
-	err := easyjson.UnmarshalFromReader(r.Body, &comment)
-
-	if err != nil {
-		customerror.PostError(w, r, ch.log, err, clientError.BadRequest)
-		return
-	}
 	userID, ok := r.Context().Value(packageConfig.RequestUserID).(int)
 	if !ok {
 		customerror.PostError(w, r, ch.log, errors.New("user unauthorized"), clientError.Unauthorizied)
 		return
+	}
+
+	comment := commModel.Comment{}
+
+	err := r.ParseMultipartForm(100 * configs.MB)
+	if err != nil {
+		customerror.PostError(w, r, ch.log, err, clientError.BadRequest)
+		return
+	}
+
+	r.Body = http.MaxBytesReader(w, r.Body, 100*configs.MB)
+
+	err = easyjson.Unmarshal([]byte(r.FormValue("jsonData")), &comment)
+	if err != nil {
+		customerror.PostError(w, r, ch.log, err, clientError.BadRequest)
+		return
+	}
+
+	photos := r.MultipartForm.File["photos"]
+	for _, photo := range photos {
+		file, err := photo.Open()
+		if err != nil {
+			customerror.PostError(w, r, ch.log, err, clientError.BadRequest)
+			return
+		}
+		fileType, err := ch.DetectFileContentType(file)
+		if err != nil {
+			customerror.PostError(w, r, ch.log, err, nil)
+			return
+		}
+
+		err = ch.CommentUseCase.UploadPhoto(&comment, file, fileType)
+		if err != nil {
+			customerror.PostError(w, r, ch.log, err, nil)
+			return
+		}
+		file.Close()
 	}
 	comment.UserID = userID
 	comm, err := ch.CommentUseCase.AddComment(comment)
@@ -108,29 +176,65 @@ func (ch *CommentHandler) AddComment(w http.ResponseWriter, r *http.Request) {
 // 400: badrequest
 // 423: locked
 func (ch *CommentHandler) UpdateComment(w http.ResponseWriter, r *http.Request) {
-	comment := commModel.Comment{}
-	err := easyjson.UnmarshalFromReader(r.Body, &comment)
-
-	if err != nil {
-		customerror.PostError(w, r, ch.log, err, clientError.BadRequest)
-		return
-	}
 
 	userID, ok := r.Context().Value(packageConfig.RequestUserID).(int)
 	if !ok {
 		customerror.PostError(w, r, ch.log, errors.New("user unauthorized"), clientError.Unauthorizied)
 		return
 	}
-	comment.UserID = userID
 
-	upComm, err := ch.CommentUseCase.UpdateComment(comment)
+	comment := commModel.Comment{}
+
+	err := r.ParseMultipartForm(100 * configs.MB)
+	if err != nil {
+		customerror.PostError(w, r, ch.log, err, clientError.BadRequest)
+		return
+	}
+
+	r.Body = http.MaxBytesReader(w, r.Body, 100*configs.MB)
+
+	err = easyjson.Unmarshal([]byte(r.FormValue("jsonData")), &comment)
+	if err != nil {
+		customerror.PostError(w, r, ch.log, err, clientError.BadRequest)
+		return
+	}
+
+	photos := r.MultipartForm.File["photos"]
+	if len(photos) > 0 {
+		err := ch.CommentUseCase.DeletePhotos(comment)
+		if err != nil {
+			customerror.PostError(w, r, ch.log, err, clientError.BadRequest)
+			return
+		}
+	}
+	for _, photo := range photos {
+		file, err := photo.Open()
+		if err != nil {
+			customerror.PostError(w, r, ch.log, err, clientError.BadRequest)
+			return
+		}
+		fileType, err := ch.DetectFileContentType(file)
+		if err != nil {
+			customerror.PostError(w, r, ch.log, err, nil)
+			return
+		}
+
+		err = ch.CommentUseCase.UploadPhoto(&comment, file, fileType)
+		if err != nil {
+			customerror.PostError(w, r, ch.log, err, nil)
+			return
+		}
+		file.Close()
+	}
+	comment.UserID = userID
+	comm, err := ch.CommentUseCase.UpdateComment(comment)
 
 	if err != nil {
 		customerror.PostError(w, r, ch.log, err, nil)
 		return
 	}
 
-	responses.SendDataResponse(w, upComm)
+	responses.SendDataResponse(w, comm)
 }
 
 // swagger:route DELETE /api/v1/comments/{id} comment DeleteComment
